{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "60720723-9ff6-4b22-8198-24aaf5d53a2a",
            "actions": [
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "43e85871-aa54-4b99-91b9-4e663883af86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cell_1",
                    "type": "Button",
                    "id": "183fba13-da00-483d-ad6d-566fdb8737f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cell_2",
                    "type": "Button",
                    "id": "05ac32f5-17d8-47f3-9ada-d9e3b119f176",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cell_3",
                    "type": "Button",
                    "id": "173e61e9-5064-4670-8845-21fc5bc6d3d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cell_4",
                    "type": "Button",
                    "id": "65dbddc0-e3f1-446f-baf9-2d5af05e9aba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5208793a-f5ee-4a36-852f-616216ec1c72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cell_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aaf7e06-5cc7-44c0-8afc-6294b3527deb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cell_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4999b97a-4406-4df2-860d-8cdfc266563e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cell_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c4bc78d-1ebe-4681-a2ca-16388bbf8e44",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b80d1fd-d60f-4f81-b072-aa6c6c0ee1c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cell_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}